--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,289 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/solution_tv"
+            android:textSize="40dp"
+            android:textAlignment="textEnd"
+            android:textColor="@color/black"
+            android:layout_above="@+id/result_tv"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"/>
+
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/result_tv"
+            android:text="0"
+            android:textSize="64dp"
+            android:textAlignment="textEnd"
+            android:textColor="@color/black"
+            android:layout_above="@+id/buttons_layout"
+            android:layout_margin="10dp" />
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_alignParentBottom="true"
+            android:background="#F1F1F1"
+            android:paddingVertical="5dp"
+            android:id="@+id/buttons_layout">
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="32dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_c"
+                    app:backgroundTint="#F44336"
+                    android:text="C"
+                    android:layout_margin="12dp"/>
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="32dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_open_bracket"
+                    app:backgroundTint="#A1A1A1"
+                    android:text="("
+                    android:layout_margin="12dp"/>
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="32dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_close_bracket"
+                    app:backgroundTint="#A1A1A1"
+                    android:text=")"
+                    android:layout_margin="12dp"/>
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="32dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_divide"
+                    android:text="/"
+                    android:layout_margin="12dp"
+                    app:backgroundTint="#FF9800"/>
+        </LinearLayout>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="32dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_7"
+                    android:text="7"
+                    android:layout_margin="12dp" />
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="32dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_8"
+                    android:text="8"
+                    android:layout_margin="12dp" />
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="32dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_9"
+                    android:text="9"
+                    android:layout_margin="12dp" />
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="32dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_multiply"
+                    android:text="*"
+                    android:layout_margin="12dp"
+                    app:backgroundTint="#FF9800"/>
+        </LinearLayout>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="32dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_4"
+                    android:text="4"
+                    android:layout_margin="12dp" />
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="32dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_5"
+                    android:text="5"
+                    android:layout_margin="12dp" />
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="32dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_6"
+                    android:text="6"
+                    android:layout_margin="12dp" />
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="32dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_plus"
+                    android:text="+"
+                    android:layout_margin="12dp"
+                    app:backgroundTint="#FF9800"/>
+        </LinearLayout>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="32dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_1"
+                    android:text="1"
+                    android:layout_margin="12dp" />
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="32dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_2"
+                    android:text="2"
+                    android:layout_margin="12dp" />
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="32dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_3"
+                    android:text="3"
+                    android:layout_margin="12dp" />
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="32dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_minus"
+                    android:text="-"
+                    android:layout_margin="12dp"
+                    app:backgroundTint="#FF9800"/>
+        </LinearLayout>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="24dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_ac"
+                    android:text="AC"
+                    app:backgroundTint="#F44336"
+                    android:layout_margin="12dp" />
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="32dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_0"
+                    android:text="0"
+                    android:layout_margin="12dp" />
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="32dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_dot"
+                    android:text="."
+                    android:layout_margin="12dp" />
+            <com.google.android.material.button.MaterialButton
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:cornerRadius="36dp"
+                    style="@style/Widget.Design.FloatingActionButton"
+                    android:textSize="32dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/button_equals"
+                    android:text="="
+                    android:layout_margin="12dp"
+                    app:backgroundTint="#FF9800"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+</RelativeLayout>
